Fix: scroll and overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,13 +26,16 @@ a{
     height: inherit;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     transition: 0.5s;
 }
 
 .navBar{
-    
+    position: fixed;
+    top: 0;
+    justify-self: flex-start;
     display: flex;
     height: 10vh;
     width: 100%;
@@ -90,6 +93,8 @@ a{
 
 .container{
     width: 100%;
+    max-height: calc(100% - 22vh);
+    overflow: auto;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -191,11 +196,13 @@ a{
 }
 
 .footer{
+    position: fixed;
     text-align: center;
     justify-self: flex-end;
     bottom: 0;
     margin: 15px 0px 0px 0px;
     width: 100vw;
+    height: 12vh;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
